# splendor

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  alembic.ini_sample  docker-compose.yaml  mainapp.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  start-dev.py
alembic/: README  template.py
api/: __init__.py
application/: play_action.py  user_info.py
config/: api_config.py  sample_api_config.py
domain/: Deck.py  DevelopmentCard.py  Token.py  __init__.py  bonus.py  card.py  developmentcard.py  game.py  noble.py  player.py  resource.py  table.py  token.py  發展卡.py
tests/: __init__.py  base_domain.py  base_flask_test_case.py  test_api_ai_sector_optional.py  test_api_backtest_action.py  test_api_backtest_result.py  test_api_chip_basic_info.py  test_api_chip_institution_holding_info.py  test_api_content.py  test_api_default_search_symbol.py  test_api_famous_investor_ranking.py  test_api_historical_rating.py  test_api_home.py  test_api_insider_buying_info.py  test_api_investor_ranking.py  test_api_related_symbol.py  test_api_search_symbol.py  test_api_stock_mining_service_status.py  test_api_symbol_dividend_indicator.py  test_api_symbol_historical_dividend.py  test_api_symbol_info.py  test_api_symbol_price.py  test_api_symbol_trend_indicator.py  test_api_symbol_value_indicator.py  test_api_symbols_score.py  test_api_tradingview_account.py  test_api_trend_performance.py  test_api_video_info.py  test_atdd06.py  test_development_card.py  test_gem_number.py  test_gold_token.py  test_happy_case.py  test_noble_quantity.py  (+5 more)
(+265 files in other folders)
